# trip-advisor-agent

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  README.md  main.py  pyproject.toml  run-example.md  run_all_scenarios.py  test_city_info.py  test_geocoding.py  test_llm.py  test_memory.py  test_packing.py  test_validator.py  test_weather.py
.claude/: settings.local.json
.claude/agents/: ai-agent-architect.md  python-refactoring-expert.md
app/agents/: data_extractor.py  orchestrator.py  validator.py
app/core/: config.py  exceptions.py  llm_client.py
app/policies/: safety.py  scope.py
app/schemas/: __init__.py  internal.py  state.py
app/server/: main.py
app/server/routes/: conversations.py
app/tools/: __init__.py  attractions.py  base.py  city_info.py  destination.py  packing.py  weather.py
test/: test_agent.py  test_attraction_recommendation.py  test_attractions_implementation.py  test_context_preservation.py  test_data_extraction.py  test_destination_recommendation.py  test_intent_transition.py  test_reasoning.py  test_simple_intent.py  test_tool_integration.py
